few section with desktop vertion is completed

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +8,148 @@
     <link rel="stylesheet" href="styles/root.css">
     <link rel="stylesheet" href="styles/herotravel.css">
 </head>
+
 <body>
-    
+    <!-- Header section start -->
+    <header class="header-container">
+        <!-- navigation start -->
+        <nav class="nav-container">
+            <div class="nav-logo">
+                <a href=""><img src="Images/logo.png" alt=""></a>
+            </div>
+            <ul class="nav-list">
+                <li id="switch-color" class="nav-item"><a href="">Home</a></li>
+                <li class="nav-item"><a href="">Packages</a></li>
+                <li class="nav-item"><a href="">Testimonial</a></li>
+                <li class="nav-item"><a href="">Blog</a></li>
+                <li class="nav-item"><a href="">Contact</a></li>
+            </ul>
+        </nav>
+        <!-- Hero section start -->
+        <div class="hero-area">
+            <div class="hero-container">
+                <div class="hero-content">
+                    <h3 class="hero-title">Explore Your Travel</h3>
+                    <p class="hero-desc">Dolor sit amet consectetur. Nullam suspendisse vitae ultricies dolor
+                        adipiscing. In
+                        et odio enim ac quis sapien urna eu phasellus.</p>
+                </div>
+                <div class="location-finder">
+                    <input type="text" name="" id="" placeholder="Where go">
+                    <label for="cars">
+                        <select name="cars" id="cars" placeholder="when">
+                            <option value="volvo">When</option>
+                            <option value="saab">Saab</option>
+                            <option value="mercedes">Mercedes</option>
+                            <option value="audi">Audi</option>
+                        </select>
+                    </label>
+                    <label for="cars">
+                        <select name="type" id="type" placeholder="Select Type">
+                            <option value="volvo">Select Type</option>
+                            <option value="saab">Saab</option>
+                            <option value="mercedes">Mercedes</option>
+                            <option value="audi">Audi</option>
+                        </select>
+                    </label>
+                    <button class="btn-primary">
+                        <img src="assets/icons/Frame.png" alt="">
+                        <p>Find Now</p>
+                    </button>
+                </div>
+
+            </div>
+        </div>
+
+    </header>
+    <!-- Main section start -->
+    <main class="main-container">
+        <!-- Our Popular Tours scetion start -->
+        <section class="popular-tour-container">
+            <div class="popular-tour-content">
+                <h3 class="tour-title">Our Popular Tours</h3>
+                <div class="popular-tour-desc-content">
+                    <p class="tour-desc">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit
+                        massa. Sodales dictumst nec nibh pellentesque.</p>
+                    <div class="tour-point">
+                        <li class="tour-point-item">Tempus euismod lacus mauris dignissim quis in ultrices. Magna nullam odio neque diam. Sociis erat at .</li>
+                        <li class="tour-point-item">Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus suspendisse nullam.</li>
+                        <li class="tour-point-item"> Accumsan eget et turpis praesent lorem egestas enim elit bibendum. Risus at in.</li>
+                    </div>
+                    <p class="tour-desc">Amet consectetur. Vulputate commodo felis molestie risus
+                        ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing
+                        risus natoque aliquet. Id bibendum nunc senectus semper tincidunt. </p>
+                </div>
+                <button class="main-btn">Read More</button>
+            </div>
+            <div class="popular-tour-img">
+                <img src="Images/popular tours.png" alt="">
+            </div>
+        </section>
+        <!-- Destination Section start -->
+        <section class="destination-container">
+            <div class="destination-content">
+                <h3 class="destination-title">
+                    Choose Your Destination
+                </h3>
+                <p class="destination-desc">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
+            </div>
+            <div class="popular-destination">
+                <div class="popular-destination-location">
+                    <img src="Images/maldives.png" alt="">
+                    <p class="center-text">Maldives</p>
+                </div>
+                <div class="popular-destination-location">
+                    <img src="Images/indonesia.png" alt="">
+                    <p class="center-text">Indonesia</p>
+                </div>
+                <div class="popular-destination-location">
+                    <img src="Images/srilanka.png" alt="">
+                    <p class="center-text">Srilanka</p>
+                </div>
+                <div class="popular-destination-location">
+                    <img src="Images/north america.png" alt="">
+                    <p class="center-text">North America</p>
+                </div>
+                <div class="popular-destination-location">
+                    <img src="Images/kashmir.png" alt="">
+                    <p class="center-text">Kashmir</p>
+                </div>
+                <div class="popular-destination-location">
+                    <img src="Images/bangladesh.png" alt="">
+                    <p class="center-text">Bangladesh</p>
+                </div>
+                <div class="popular-destination-location">
+                    <img src="Images/bandarban.png" alt="">
+                    <p class="center-text">Bandarban</p>
+                </div>
+            </div>
+        </section>
+        <!-- Why Choose Us section start -->
+        <section class="choose-us-container">
+            <div class="choose-us-content">
+                <h3 class="choose-us-title">Why Choose Us</h3>
+                <p class="choose-us-desc">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
+            </div>
+            <div class="choose-us-cards">
+                <div id="color-a" class="choose-us-card-item">
+                    <img src="assets/choose-icons/Handpicked.png" alt="">
+                    <h4 class="choose-us-card-title">Handpicked Hotels</h4>
+                    <p class="choose-us-card-desc">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+                </div>
+                <div id="color-b" class="choose-us-card-item">
+                    <img src="assets/choose-icons/World Class.png" alt="">
+                    <h4 class="choose-us-card-title">World Class Service</h4>
+                    <p class="choose-us-card-desc">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+                </div>
+                <div id="color-c" class="choose-us-card-item">
+                    <img src="assets/choose-icons/Price Guarantee.png" alt="">
+                    <h4 class="choose-us-card-title">Best Price Guarantee</h4>
+                    <p class="choose-us-card-desc">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
+
 </html>
