--- a/index.html
+++ b/index.html
@@ -72,9 +72,12 @@
                     <p class="tour-desc">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit
                         massa. Sodales dictumst nec nibh pellentesque.</p>
                     <div class="tour-point">
-                        <li class="tour-point-item">Tempus euismod lacus mauris dignissim quis in ultrices. Magna nullam odio neque diam. Sociis erat at .</li>
-                        <li class="tour-point-item">Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus suspendisse nullam.</li>
-                        <li class="tour-point-item"> Accumsan eget et turpis praesent lorem egestas enim elit bibendum. Risus at in.</li>
+                        <li class="tour-point-item">Tempus euismod lacus mauris dignissim quis in ultrices. Magna nullam
+                            odio neque diam. Sociis erat at .</li>
+                        <li class="tour-point-item">Adipiscing ornare pellentesque mauris volutpat tortor vitae platea
+                            porta lacus. Lectus suspendisse nullam.</li>
+                        <li class="tour-point-item"> Accumsan eget et turpis praesent lorem egestas enim elit bibendum.
+                            Risus at in.</li>
                     </div>
                     <p class="tour-desc">Amet consectetur. Vulputate commodo felis molestie risus
                         ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing
@@ -92,7 +95,8 @@
                 <h3 class="destination-title">
                     Choose Your Destination
                 </h3>
-                <p class="destination-desc">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
+                <p class="destination-desc">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit
+                    massa. Sodales dictumst nec nibh pellentesque.</p>
             </div>
             <div class="popular-destination">
                 <div class="popular-destination-location">
@@ -129,26 +133,169 @@
         <section class="choose-us-container">
             <div class="choose-us-content">
                 <h3 class="choose-us-title">Why Choose Us</h3>
-                <p class="choose-us-desc">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
+                <p class="choose-us-desc">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit
+                    massa. Sodales dictumst nec nibh pellentesque.</p>
             </div>
             <div class="choose-us-cards">
                 <div id="color-a" class="choose-us-card-item">
                     <img src="assets/choose-icons/Handpicked.png" alt="">
                     <h4 class="choose-us-card-title">Handpicked Hotels</h4>
-                    <p class="choose-us-card-desc">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+                    <p class="choose-us-card-desc">Amet consectetur. Vulputate commodo felis molestie risus ornare nulla
+                        amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque
+                        aliquet. </p>
                 </div>
                 <div id="color-b" class="choose-us-card-item">
                     <img src="assets/choose-icons/World Class.png" alt="">
                     <h4 class="choose-us-card-title">World Class Service</h4>
-                    <p class="choose-us-card-desc">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+                    <p class="choose-us-card-desc">Amet consectetur. Vulputate commodo felis molestie risus ornare nulla
+                        amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque
+                        aliquet. </p>
                 </div>
                 <div id="color-c" class="choose-us-card-item">
                     <img src="assets/choose-icons/Price Guarantee.png" alt="">
                     <h4 class="choose-us-card-title">Best Price Guarantee</h4>
-                    <p class="choose-us-card-desc">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+                    <p class="choose-us-card-desc">Amet consectetur. Vulputate commodo felis molestie risus ornare nulla
+                        amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque
+                        aliquet. </p>
                 </div>
             </div>
         </section>
+        <!-- Deals & Discounts section start -->
+        <section class="deals-container">
+            <div class="deals-content">
+                <h3 class="deals-content-title">Deals & Discounts</h3>
+                <p class="deals-content-desc">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
+            </div>
+            <div class="deals-items">
+                <div id="deals-a">
+                    <div class="deals-card">
+                        <div class="simple-details">
+                            <div class="simple-details-items">
+                                <img src="assets/icons/simple/date.png" alt="">
+                                <h5>7 Day / 6 Night</h5>
+                            </div>
+                            <div class="simple-details-items">
+                                <img src="assets/icons/simple/user.png" alt="">
+                                <h5>Max : 10</h5>
+                            </div>
+                            <div class="simple-details-items">
+                                <img src="assets/icons/simple/location.png" alt="">
+                                <h5>Malaysia</h5>
+                            </div>
+                        </div>
+                        <div class="simple-details-content">
+                            <h3 class="simple-details-title">Tour To Satorini</h3>
+                            <p class="simple-details-desc">Amet consectetur. Vulputate commodo felis
+                                molestie risus ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis.
+                                Habitant adipiscing.</p>
+                            <h4 class="simple-details-price">Price: $1300-$1500</h4>
+                            <button class="main-btn">Book Now</button>
+                        </div>
+                    </div>
+
+                </div>
+                <div id="deals-b">
+                    <div id="deals-card-b" class="deals-card" >
+                        <div class="simple-details">
+                            <div class="simple-details-items">
+                                <img src="assets/icons/simple/date.png" alt="">
+                                <h5>7 Day / 6 Night</h5>
+                            </div>
+                            <div class="simple-details-items">
+                                <img src="assets/icons/simple/user.png" alt="">
+                                <h5>Max : 10</h5>
+                            </div>
+                            <div class="simple-details-items">
+                                <img src="assets/icons/simple/location.png" alt="">
+                                <h5>Malaysia</h5>
+                            </div>
+                        </div>
+                        <div class="simple-details-content">
+                            <h3 class="simple-details-title">Tour To Satorini</h3>
+                            <p class="simple-details-desc">Amet consectetur. Vulputate commodo felis
+                                molestie risus ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis.
+                                Habitant adipiscing.</p>
+                            <h4 class="simple-details-price">Price: $1300-$1500</h4>
+                            <button class="main-btn">Book Now</button>
+                        </div>
+
+                    </div>
+
+                </div>
+                <div id="deals-c">
+                    <div class="deals-card">
+                        <div class="simple-details">
+                            <div class="simple-details-items">
+                                <img src="assets/icons/simple/date.png" alt="">
+                                <h5>7 Day / 6 Night</h5>
+                            </div>
+                            <div class="simple-details-items">
+                                <img src="assets/icons/simple/user.png" alt="">
+                                <h5>Max : 10</h5>
+                            </div>
+                            <div class="simple-details-items">
+                                <img src="assets/icons/simple/location.png" alt="">
+                                <h5>Malaysia</h5>
+                            </div>
+                        </div>
+                        <div class="simple-details-content">
+                            <h3 class="simple-details-title">Tour To Satorini</h3>
+                            <p class="simple-details-desc">Amet consectetur. Vulputate commodo felis
+                                molestie risus ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis.
+                                Habitant adipiscing.</p>
+                            <h4 class="simple-details-price">Price: $1300-$1500</h4>
+                            <button class="main-btn">Book Now</button>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+        <!-- Simple Perfect Place section start -->
+        <section class="popular-tour-container">
+            <div class="popular-tour-content">
+                <h3 class="tour-title">A Simple Perfect Place <br> To Get Lost</h3>
+                <div class="popular-tour-desc-content">
+                    <p class="tour-desc">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. </p>
+                    <div class="tour-point">
+                        <li class="tour-point-item">Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus suspendisse nullam.</li>
+                        <li class="tour-point-item">Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus suspendisse nullam.</li>
+                    </div>
+                </div>
+                <button class="main-btn">See More</button>
+            </div>
+            <div class="popular-tour-img">
+                <iframe width="560" height="415" src="https://www.youtube.com/embed/linlz7-Pnvw?si=PfAKrCcvk3OhwWFS" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+        </section>
+        <!-- Newsletter Section start -->
+         <section class="newsletter-container">
+            <div class="newsletter-content">
+                <div class="newsletter-text">
+                    <h4 class="newsletter-title">Newsletter</h4>
+                    <p class="newsletter-desc">Get your daily dose of travel news & tips. Sign up today!</p>
+                    <hr>
+                </div>
+                <div class="newsletter-filed">
+                    <form>
+                        <label for="name">
+                            <input type="text" name="name" id="name" placeholder="Enter Your Name">
+                        </label>
+                        <label for="email">
+                            <input type="email" name="email" id="email" placeholder=" Enter Your Email">
+                        </label>
+                        <input type="submit" value="Subscribe">
+                    </form>
+                </div>
+            </div>
+            <div class="newsletter-img-container">
+                <img src="Images/newsletter.png" alt="">
+                <div class="newsletter-img-overflow">
+                    <a href="">Travel.com</a>
+                    <h4>Save up to 70%</h4>
+                </div>
+            </div>
+         </section>
     </main>
 </body>
 
