the hero travel website desktop version is develop. now i'm ready to develop the responsiveness

--- a/index.html
+++ b/index.html
@@ -297,6 +297,23 @@
             </div>
          </section>
     </main>
+    <!-- Footer section start -->
+     <footer class="footer-container">
+        <div class="footer-content">
+            <div class="footer-logo">
+                <img src="Images/logo.png" alt="">
+            </div>
+            <p class="footer-desc">Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi vitae blandit orci potenti vulputate. Leo erat maecenas vitae elementum ultricies nullam. </p>
+            <div class="socail-links">
+                <a href=""><img src="assets/Socail/facebook.svg" alt=""></a>
+                <a href=""><img src="assets/Socail/x-twitter.svg" alt=""></a>
+                <a href=""><img src="assets/Socail/instragram.svg" alt=""></a>
+                <a href=""><img src="assets/Socail/git-hub.svg" alt=""></a>
+            </div>
+            <hr>
+            <p class="copy-right">2017, All Rights Reserved.</p>
+        </div>
+     </footer>
 </body>
 
 </html>
